<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpic">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"

        android:layout_marginStart="15dp"


        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username_email"
        android:textColorHint="@color/white"
        android:padding="20dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:background="@color/black"
        android:text="@string/login"
        app:iconTint="#000000"
        app:rippleColor="#000000" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/forgotpass"
    android:layout_below="@+id/login"
    android:textColor="@color/white"
    android:text="@string/forgot_password"
    android:layout_centerHorizontal="true"
    android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:id="@+id/others"
        android:layout_above="@+id/othersicon"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/othersicon"
           android:layout_alignParentBottom="true"

           android:gravity="center">
           
           <ImageView
               android:layout_width="48dp"
               android:layout_height="48dp"
               android:layout_margin="10dp"
               android:src="@drawable/google_icon"/>
           <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/facebook_icon"
               android:layout_margin="10dp"
           />
       </LinearLayout>

</RelativeLayout>